--- a/hw3/styleasdfg.css
+++ b/hw3/styleasdfg.css
@@ -121,6 +121,7 @@ p {
     object-fit: cover;
     margin-left:15px;
     margin-right:15px;
+    border-right:20px solid PaleTurquoise;
 }
 
 .text_inside{
